force-app/main/default/objects/Creditor_Account__c/Creditor_Account__c.object-meta.xml
<CustomObject>
    <description>Creditor Account records captured from Credit pack</description>
    <label>Creditor Account</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Creditor Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>