force-app/main/default/objects/Creditor_Account__c/fields/Address_of_Creditor__c.field-meta.xml
<CustomField>
    <fullName>Address_of_Creditor__c</fullName>
    <description>Address of Creditor</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Address of Creditor</inlineHelpText>
    <label>Address of Creditor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>