force-app/main/default/objects/Creditor_Account__c/fields/Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Type__c</fullName>
    <description>Claim Type</description>
    <inlineHelpText>Claim Type</inlineHelpText>
    <label>Claim Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Secured</fullName>
            </value>
            <value>
                <fullName>Unsecured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>