force-app/main/default/objects/Creditor_Account__c/fields/Creditor_Name__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Name__c</fullName>
    <description>Creditor Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Creditor Name</inlineHelpText>
    <label>Creditor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>