force-app/main/default/objects/Creditor_Account__c/fields/Insolvency__c.field-meta.xml
<CustomField>
    <fullName>Insolvency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Insolvency</description>
    <inlineHelpText>Insolvency</inlineHelpText>
    <label>Insolvency</label>
    <referenceTo>Insolvency__c</referenceTo>
    <relationshipLabel>Creditor Accounts</relationshipLabel>
    <relationshipName>Creditor_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>