force-app/main/default/objects/Creditor_Account__c/fields/Liabilities_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Liabilities_Type_Code__c</fullName>
    <description>Liabilities Type Code</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Liabilities Type Code</inlineHelpText>
    <label>Liabilities Type Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>