force-app/main/default/objects/Creditor_Account__c/fields/Liability_Id__c.field-meta.xml
<CustomField>
    <fullName>Liability_Id__c</fullName>
    <description>Creditor Package From LiabilityId</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Creditor Package From LiabilityId</inlineHelpText>
    <label>Liability Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>