force-app/main/default/objects/Creditor_Account__c/fields/Preferred_Amount__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Amount__c</fullName>
    <description>Preferred Amount</description>
    <inlineHelpText>Preferred Amount</inlineHelpText>
    <label>Preferred Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>