force-app/main/default/objects/Creditor_Account__c/fields/Secured_Asset_Amount__c.field-meta.xml
<CustomField>
    <fullName>Secured_Asset_Amount__c</fullName>
    <description>Secured Asset Amount</description>
    <inlineHelpText>Secured Asset Amount</inlineHelpText>
    <label>Secured Asset Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>