force-app/main/default/objects/Creditor_Account__c/fields/Unsecured_Asset_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unsecured_Asset_Amount__c</fullName>
    <description>Unsecured Asset Amount</description>
    <inlineHelpText>Unsecured Asset Amount</inlineHelpText>
    <label>Unsecured Asset Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>