force-app/main/default/objects/Creditor_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Creditor_Name__c</columns>
    <columns>Insolvency__c</columns>
    <columns>Claim_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>