force-app/main/default/objects/Creditor_Account__c/listViews/All_Created_Today.listView-meta.xml
<ListView>
    <fullName>All_Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Creditor_Name__c</columns>
    <columns>Insolvency__c</columns>
    <columns>Claim_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Created Today</label>
</ListView>